现在流体样板终端内右键写入装有流体的容器，左键写入流体，而不是总将流体写入 预处理了一些东西

--- a/src/main/resources/assets/ae2fc/lang/en_us.lang
+++ b/src/main/resources/assets/ae2fc/lang/en_us.lang
@@ -79,6 +79,7 @@ ae2fc.tooltip.block_item.hint=Blocking mode only checks item.
 ae2fc.tooltip.block_fluid=Block Fluid
 ae2fc.tooltip.block_fluid.hint=Blocking mode only checks fluid.
 ae2fc.tooltip.pattern_encoder.name=Encoded By %s
+ae2fc.tooltip.fluid_pattern.tooltip=§9%s§r mark §6%s§r
 
 ae2fc.pauto.fluid_processing.name=Fluid Processing
 ae2fc.pauto.fluid_processing.name_short=Fluid
